test/conformance/chainsaw/mutating-policies/gzip/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Security
    policies.kyverno.io/description: Injects the CoCo initdata annotation into pods with
      the label 'coco=enabled' and reference to an initdata ConfigMap. Retrieves initdata
      from the specified ConfigMap and injects it as the 'io.katacontainers.config.runtime.cc_init_data'
      annotation.
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Inject CoCo InitData Annotation
  name: inject-coco-initdata
spec:
  autogen:
    podControllers:
      controllers:
      - deployments
      - statefulsets
      - daemonsets
      - jobs
      - cronjobs
  matchConditions:
  - expression: "object.metadata.labels['coco'] == 'enabled'"
    name: has-coco-label
  - expression: "has(object.metadata.annotations) && has(object.metadata.annotatiations['coco.io/initdata-configmap'])"
    name: has-coco-label
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - pods
  mutations:
  - applyConfiguration:
      expression: 'variables.initData != "" ? Object{metadata: Object.metadata{annotations: {"io.katacontainers.config.runtime.cc_init_data": variables.initData}}} : Object{}'
    patchType: ApplyConfiguration
  variables:
  - expression: "has(object.metadata.annotations) && 'coco.io/initdata-configmap' in object.metadata.annotations ? object.metadata.annotations['coco.io/initdata-configmap'] : 'initdata-configmap'"
    name: configMapName
  - expression: "has(object.metadata.namespace) ? object.metadata.namespace : 'default'"
    name: configMapNamespace
  - expression: "resource.Get('v1', 'configmaps', variables.configMapNamespace, variables.configMapName)"
    name: configMap
  - expression: "has(variables.configMap.data) && 'data' in variables.configMap.data ? gzip.decompress(base64.decode(variables.configMap.data['data'])) : ''"
